chore(deps): renovate ignore netlify-onegraph-internal (#4379)
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/renovate.json5
+++ b/renovate.json5
@@ -3,4 +3,10 @@
   ignorePresets: [':prHourlyLimit2'],
   semanticCommits: true,
   dependencyDashboard: true,
+  packageRules: [
+    {
+      matchPackageNames: ['netlify-onegraph-internal'],
+      enabled: false,
+    },
+  ],
 }
