--- a/package.json
+++ b/package.json
@@ -245,6 +245,7 @@
     "fuzzy": "^0.1.3",
     "get-port": "^5.1.0",
     "gh-release-fetch": "^3.0.0",
+    "git-clone": "^0.2.0",
     "git-repo-info": "^2.1.0",
     "gitconfiglocal": "^2.1.0",
     "graphql": "^16.1.0",
@@ -319,7 +320,7 @@
     "form-data": "^4.0.0",
     "got": "^11.8.1",
     "graphviz": "^0.0.9",
-    "husky": "^7.0.4",
+    "husky": "^7.0.0",
     "ini": "^2.0.0",
     "mock-fs": "^5.1.2",
     "p-timeout": "^4.0.0",
