chore: generate token

--- a/.github/workflows/error-page-template.yml
+++ b/.github/workflows/error-page-template.yml
@@ -8,11 +8,10 @@ jobs:
   get-template:
     runs-on: ubuntu-latest
     steps:
-      # - uses: navikt/github-app-token-generator@2d70c12368d1958155af4d283f9f21c9a2a8cb98
-      #   id: get-token
-      #   with:
-      #     private-key: ${{ secrets.TOKENS_PRIVATE_KEY }}
-      #     app-id: ${{ secrets.TOKENS_APP_ID }}
+      - uses: navikt/github-app-token-generator@2d70c12368d1958155af4d283f9f21c9a2a8cb98
+        with:
+          private-key: ${{ secrets.TOKENS_PRIVATE_KEY }}
+          app-id: ${{ secrets.TOKENS_APP_ID }}
       - uses: actions/checkout@v3
         with:
           repository: 'netlify/internal-shared-templates'
