feat: add support for Edge Functions (#8)
* chore: change package details

* chore: update package

* chore: bump

* chore: add @netlify/edge-bundler

* chore: bump

* chore: remove npmrc line

* chore: bump version

* chore: update @netlify/edge-bundler

* feat: deploy Edge Handlers to internal path

* feat: add local development experience

* chore: bump version

* chore: update @netlify/edge-bundler

* refactor: move `watcher` util

* feat: add `configWatcher`

* feat: updates to Edge Handlers dev server

* chore: update @netlify/edge-bundler

* refactor: remove unused error binding

* chore: update package name

* chore: update deps

* fix: use correct URL path when matching Edge Handlers

* chore: bump version

* chore: bump version

* feat: add support for internal handlers in local dev (#1)

* feat: add support for internal handlers in local dev

* refactor: correctly merge declarations

* chore: bump version

* fix: run config watcher only on certain commands (#2)

* chore: bump version

* chore: bump version

* feat: add support for user import maps (#3)

* feat: add support for user import maps

* feat: warn when failing to read import map file

* chore: bump version

* chore: bump version

* fix: improve error handling for Edge Handlers (#4)

* chore: bump version

* feat: listen for `NETLIFY_DENO_DEBUG` environment variable (#5)

* feat: listen for `NETLIFY_DENO_DEBUG` environment variable

* chore: upgrade @netlify-labs/edge-bundler

* chore: bump version

* fix: use `0.0.0.0` for Deno server host (#6)

* fix: wait for Edge Handlers server to become available (#7)

* fix: wait for Edge Handlers server to become available

* refactor: wait for server inside request

* refactor: increase timeout

* refactor: use watcher from correct location

* chore: update package.json

* chore: disable release-please

* feat: replace @netlify/build with @netlify-labs/build-i

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
         node-version: ['*']
+    env:
+      PACKAGES_TOKEN: ${{ secrets.PACKAGES_TOKEN }}
     steps:
       # Sets an output parameter if this is a release PR
       - name: Check for release
@@ -57,6 +59,8 @@ jobs:
           - os: windows-latest
             node-version: '12.x'
       fail-fast: false
+    env:
+      PACKAGES_TOKEN: ${{ secrets.PACKAGES_TOKEN }}
     steps:
       # Sets an output parameter if this is a release PR
       - name: Check for release
@@ -82,6 +86,10 @@ jobs:
           cache-dependency-path: 'npm-shrinkwrap.json'
           check-latest: true
         if: '${{!steps.release-check.outputs.IS_RELEASE}}'
+      - name: Setup Deno
+        uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
       - name: Install core dependencies
         run: npm ci --no-audit
         if: '${{!steps.release-check.outputs.IS_RELEASE}}'
