feat: add `recipes` command + `vscode` recipe (#10)
* chore: change package details

* chore: update package

* chore: bump

* chore: add @netlify/edge-bundler

* chore: bump

* chore: remove npmrc line

* chore: bump version

* chore: update @netlify/edge-bundler

* feat: deploy Edge Handlers to internal path

* feat: add local development experience

* chore: bump version

* chore: update @netlify/edge-bundler

* refactor: move `watcher` util

* feat: add `configWatcher`

* feat: updates to Edge Handlers dev server

* chore: update @netlify/edge-bundler

* refactor: remove unused error binding

* chore: update package name

* chore: update deps

* fix: use correct URL path when matching Edge Handlers

* chore: bump version

* chore: bump version

* feat: add support for internal handlers in local dev (#1)

* feat: add support for internal handlers in local dev

* refactor: correctly merge declarations

* chore: bump version

* fix: run config watcher only on certain commands (#2)

* chore: bump version

* chore: bump version

* feat: add support for user import maps (#3)

* feat: add support for user import maps

* feat: warn when failing to read import map file

* chore: bump version

* chore: bump version

* fix: improve error handling for Edge Handlers (#4)

* chore: bump version

* feat: listen for `NETLIFY_DENO_DEBUG` environment variable (#5)

* feat: listen for `NETLIFY_DENO_DEBUG` environment variable

* chore: upgrade @netlify-labs/edge-bundler

* chore: bump version

* fix: use `0.0.0.0` for Deno server host (#6)

* fix: wait for Edge Handlers server to become available (#7)

* fix: wait for Edge Handlers server to become available

* refactor: wait for server inside request

* refactor: increase timeout

* refactor: use watcher from correct location

* chore: update package.json

* chore: disable release-please

* feat: replace @netlify/build with @netlify-la

--- a/package.json
+++ b/package.json
@@ -208,7 +208,7 @@
   "dependencies": {
     "@netlify-labs/build-internal": "^27.0.3",
     "@netlify-labs/config-internal": "^17.0.18",
-    "@netlify-labs/edge-bundler": "^0.6.0",
+    "@netlify-labs/edge-bundler": "^0.7.0",
     "@netlify/framework-info": "^9.0.2",
     "@netlify/local-functions-proxy": "^1.1.1",
     "@netlify/plugin-edge-handlers": "^3.0.7",
@@ -310,6 +310,7 @@
     "through2-map": "^3.0.0",
     "to-readable-stream": "^2.1.0",
     "toml": "^3.0.0",
+    "unixify": "^1.0.0",
     "update-notifier": "^5.0.0",
     "uuid": "^8.0.0",
     "wait-port": "^0.2.2",
