--- a/package.json
+++ b/package.json
@@ -241,6 +241,7 @@
     "dotenv": "^16.0.0",
     "env-paths": "^2.2.0",
     "envinfo": "^7.3.1",
+    "etag": "^1.8.1",
     "execa": "^5.0.0",
     "express": "^4.17.1",
     "express-logging": "^1.1.1",
