fix: simpler template and proper folder structure

--- a/src/functions-templates/go/scheduled-function/netlify.toml
+++ b/src/functions-templates/go/scheduled-function/netlify.toml
@@ -1,11 +1,2 @@
-[build]
-functions = "functions"
-
-[build.environment]
-GO_VERSION = "1.17"
-
-[functions]
-directory = "src/"
-
-[functions.hourly-schedule]
+[functions.{{name}}]
 schedule = "@hourly"
