--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "registry": "https://npm.pkg.github.com"
   },
   "description": "Netlify command line tool",
-  "version": "2.6.0",
+  "version": "9.16.6",
   "author": "Netlify Inc.",
   "contributors": [
     "Abraham Schilling <AbrahamSchilling@gmail.com> (https://gitlab.com/n4bb12)",
@@ -209,9 +209,8 @@
     "prettier": "--ignore-path .gitignore --loglevel=warn \"{src,tools,scripts,site,tests,.github}/**/*.{mjs,cjs,js,md,yml,json,html}\" \"*.{mjs,cjs,js,yml,json,html}\" \".*.{mjs,cjs,js,yml,json,html}\" \"!CHANGELOG.md\" \"!npm-shrinkwrap.json\" \"!**/*/package-lock.json\" \"!.github/**/*.md\""
   },
   "dependencies": {
-    "@netlify-labs/build-internal": "^27.5.0",
-    "@netlify-labs/config-internal": "^17.0.18",
-    "@netlify-labs/edge-bundler": "^0.11.0",
+    "@netlify/build": "^26.5.3",
+    "@netlify/config": "^17.0.20",
     "@netlify/framework-info": "^9.0.2",
     "@netlify/local-functions-proxy": "^1.1.1",
     "@netlify/plugins-list": "^6.19.0",
