--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "Sam Holmes <samholmes1337@gmail.com> (https://samholmes.net)",
     "Sander de Groot (https://degroot.dev)",
     "Sarah Drasner <sarah.drasner@gmail.com> (https://twitter.com/sarah_edo)",
+    "Sarah Etter <sarah@sarahetter.com> (http://www.sarahetter.com)",
     "Scott Spence <spences10apps@gmail.com> (https://twitter.com/spences10)",
     "Sean Grove <sean@bushi.do> (https://twitter.com/sgrove)",
     "Sebastian Smolorz",
@@ -330,6 +331,7 @@
     "husky": "^7.0.4",
     "ini": "^2.0.0",
     "mock-fs": "^5.1.2",
+    "nock": "^13.2.4",
     "p-timeout": "^4.0.0",
     "rewiremock": "^3.14.3",
     "seedrandom": "^3.0.5",
