feat: add https support for Edge Functions

--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,6 @@ tests/integration/hugo-site/resources
 tests/integration/hugo-site/out
 tests/integration/hugo-site/.hugo_build.lock
 _test_out/**
+*.crt
+*.key
 
