--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,12 @@ jobs:
       - name: Linting
         run: npm run format:ci
         if: '${{!steps.release-check.outputs.IS_RELEASE}}'
+      - name: Generate self-signed certificates for integration tests
+        uses: kofemann/action-create-certificate@v0.0.4
+        with:
+          hostcert: 'tests/integration/assets/localhost.crt'
+          hostkey: 'tests/integration/assets/localhost.key'
+          cachain: 'tests/integration/assets/localhost.pem'
       - name: Run unit tests
         run: npm run test:ci:ava:unit
         if: '${{!steps.release-check.outputs.IS_RELEASE}}'
