--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,12 +39,9 @@ jobs:
       - name: Linting
         run: npm run format:ci
         if: '${{!steps.release-check.outputs.IS_RELEASE}}'
-      - name: Generate self-signed certificates for integration tests
-        uses: kofemann/action-create-certificate@v0.0.4
-        with:
-          hostcert: 'localhost.crt'
-          hostkey: 'localhost.key'
-          cachain: 'localhost.pem'
+      - name: Generate self-signed certificates
+        run: npm run certs
+        if: '${{!steps.release-check.outputs.IS_RELEASE}}'
       - name: Run unit tests
         run: npm run test:ci:ava:unit
         if: '${{!steps.release-check.outputs.IS_RELEASE}}'
