--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Generate self-signed certificates
         run: npm run certs
         if: '${{!steps.release-check.outputs.IS_RELEASE}}'
+        shell: bash
       - name: Run unit tests
         run: npm run test:ci:ava:unit
         if: '${{!steps.release-check.outputs.IS_RELEASE}}'
