--- a/package.json
+++ b/package.json
@@ -174,7 +174,7 @@
   },
   "scripts": {
     "prepare": "husky install node_modules/@netlify/eslint-config-node/.husky/",
-    "start": "node ./bin/run",
+    "start": "node ./bin/run deploy --prod --dir=test-site/build --functions=test-site/functions --newSiteName=torchlabs-tasasdoqoidqwd --accountName=sharithgodda --funcEnvVariable='TENENT_TOKEN:qwdqwdwd'",
     "test": "run-s format test:dev",
     "format": "run-s format:check-fix:*",
     "format:ci": "run-s format:check:*",
