chore: multiple measures to speed up e2e tests
increase timeout to 10min
cache verdaccio storage in github actions
only write .npmrc during publish
cache packages in verdaccio up to 1 day

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches: [main]
   pull_request:
-    types: [synchronize, opened, reopened, edited]
     branches: [main]
   schedule:
     # check daily to notice potential package manager issues
@@ -34,6 +33,11 @@ jobs:
           cache: 'npm'
           cache-dependency-path: 'npm-shrinkwrap.json'
           check-latest: true
+      - name: Cache verdaccio storage
+        uses: actions/cache@v3
+        with:
+          path: ./.verdaccio-storage
+          key: verdaccio-e2e-cli-${{ hashFiles('./npm-shrinkwrap.json') }}
       - name: Install dependencies
         run: npm ci --no-audit
       - name: Install pnpm
