--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ site/src/**/*.md
 !site/src/register-addon-thanks.md
 
 # tests
+.verdaccio-storage
 .eslintcache
 tests/integration/hugo-site/resources
 tests/integration/hugo-site/out
@@ -35,4 +36,3 @@ tests/integration/hugo-site/.hugo_build.lock
 _test_out/**
 *.crt
 *.key
-
