--- a/renovate.json5
+++ b/renovate.json5
@@ -5,7 +5,7 @@
   dependencyDashboard: true,
   packageRules: [
     {
-      matchPackageNames: ['netlify-onegraph-internal', 'googlecloudplatform/release-please-action'],
+      matchPackageNames: ['netlify-onegraph-internal'],
       enabled: false,
     },
   ],
