fix: resolve missing output when using --json

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "Dan Loewenherz <dan@lionheartsw.com> (https://twitter.com/dwlz)",
     "Daniel Tschinder (https://twitter.com/TschinderDaniel)",
     "Daniel Woelfel <dwwoelfel@gmail.com> (https://twitter.com/danielwoelfel)",
+    "Dario De Vito <dario.devito@gmail.com> (https://twitter.com/dariodevito)",
     "Dave Ackerman <dmackerman@gmail.com>",
     "David Calavera <david@netlify.com> (https://twitter.com/calavera)",
     "David Lemler <dlemler@pm.me> (https://twitter.com/davidlemlerm)",
