--- a/package.json
+++ b/package.json
@@ -224,7 +224,7 @@
     "@sindresorhus/slugify": "^1.1.0",
     "ansi-escapes": "^5.0.0",
     "ansi-styles": "^5.0.0",
-    "ansi2html": "^0.0.1",
+    "ansi-to-html": "^0.7.2",
     "ascii-table": "0.0.9",
     "backoff": "^2.5.0",
     "better-opn": "^3.0.0",
