chore: pin version

--- a/package.json
+++ b/package.json
@@ -320,7 +320,7 @@
     "unixify": "^1.0.0",
     "update-notifier": "^5.0.0",
     "uuid": "^8.0.0",
-    "wait-port": "^0.2.2",
+    "wait-port": "0.2.9",
     "winston": "^3.2.1",
     "write-file-atomic": "^4.0.0"
   },
