--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "dustincrogers",
     "ehmicky (https://twitter.com/ehmicky)",
     "internal tools netlibot",
+    "just toby",
     "kvn-shn",
     "netlibot (https://www.netlify.com)",
     "nikoladev",
@@ -158,7 +159,8 @@
     "/src/functions-templates/**",
     "/src/lib/functions/templates/**",
     "!/src/**/node_modules/**",
-    "!/src/**/*.test.js"
+    "!/src/**/*.test.js",
+    "/vendor"
   ],
   "homepage": "https://github.com/netlify/cli",
   "keywords": [
@@ -318,7 +320,7 @@
     "unixify": "^1.0.0",
     "update-notifier": "^5.0.0",
     "uuid": "^8.0.0",
-    "wait-port": "^0.2.2",
+    "wait-port": "0.2.9",
     "winston": "^3.2.1",
     "write-file-atomic": "^4.0.0"
   },
