--- a/package.json
+++ b/package.json
@@ -160,8 +160,7 @@
     "/src/functions-templates/**",
     "/src/lib/functions/templates/**",
     "!/src/**/node_modules/**",
-    "!/src/**/*.test.js",
-    "/vendor"
+    "!/src/**/*.test.js"
   ],
   "homepage": "https://github.com/netlify/cli",
   "keywords": [
