--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
     "Caleb (https://caleblarsen.dev)",
     "Cassidy Williams (https://twitter.com/cassidoo)",
     "Charlie Depman <cdepman@gmail.com> (depman.dev)",
-    "Charlie Depman <cdepman@gmail.com> (depman.dev)",
-    "Charlie Depman <cdepman@gmail.com> (depman.dev)",
     "Cole Bosmann",
     "Dan Croak (https://twitter.com/croaky)",
     "Dan Loewenherz <dan@lionheartsw.com> (https://twitter.com/dwlz)",
@@ -69,6 +67,7 @@
     "Joshua T. (http://localhost:8080)",
     "João Antunes <me@jgantunes.com> (https://twitter.com/jgantunes)",
     "Karagulamos (https://twitter.com/karagulamos)",
+    "khendrikse",
     "Kaspar Emanuel <kaspar@monostable.co.uk> (https://twitter.com/kaspar_e)",
     "Keiko Oda (https://keikooda.net/)",
     "Krasimir Nedelchev (https://github.com/kaykayehnn)",
