--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  checks: write
+
 jobs:
   lint-docs:
     runs-on: ubuntu-latest
@@ -13,12 +16,17 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v3
 
+      - name: Download styles
+        run: |
+          curl -s https://vale-library.netlify.app/styles.zip -o styles.zip
+          unzip styles.zip -d .github/styles
+          rm styles.zip
+
       - name: Vale
-        uses: errata-ai/vale-action@v2.0.1
+        uses: errata-ai/vale-action@v2
         continue-on-error: true
         with:
-          styles: https://vale-library.netlify.app/styles.zip
           files: '["docs", "src", "README.md", "CODE_OF_CONDUCT.md", "CONTRIBUTING.md"]'
-          onlyAnnotateModifiedLines: true
+          fail_on_error: true
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
