--- a/package.json
+++ b/package.json
@@ -204,8 +204,8 @@
     "test:init:eleventy-deps": "npm ci --prefix tests/integration/eleventy-site --no-audit",
     "test:init:hugo-deps": "npm ci --prefix tests/integration/hugo-site --no-audit",
     "test:dev:ava": "ava --verbose",
-    "test:ci:ava:unit": "c8 -r json ava --no-worker-threads 'tests/unit/**/*.test.js' 'tools/**/*.test.mjs'",
-    "test:ci:ava:integration": "c8 -r json ava --concurrency 1 --no-worker-threads 'tests/integration/**/*.test.js'",
+    "test:ci:ava:unit": "c8 -r json ava --no-worker-threads tests/unit/ tools/",
+    "test:ci:ava:integration": "c8 -r json ava --concurrency 1 --no-worker-threads tests/integration/",
     "test:affected": "node ./tools/affected-test.mjs",
     "e2e": "node ./tools/e2e/run.mjs",
     "docs": "node ./site/scripts/docs.mjs",
