fix(graph): support fragments and passing data to handler generation (#4950)
* fix(graph): support fragments and passing data to handler generation

* chore: update contributors field

* fix: update docs~

Co-authored-by: sgrove <sgrove@users.noreply.github.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "Liran Tal <liran.tal@gmail.com> (https://twitter.com/liran_tal)",
     "Louis DeScioli (https://twitter.com/descioli)",
     "Lukas Holzer <lukas.holzer@netlify.com> (https://twitter.com/luka5c0m)",
+    "Lxxyx <Lxxyxzj@gmail.com> (https://twitter.com/Lxxyx_)",
     "Marc Littlemore (https://twitter.com/marclittlemore)",
     "Marcus Weiner",
     "Mark Bello <mark@markbello.dev> (https://markbello.dev)",
@@ -292,7 +293,7 @@
     "multiparty": "^4.2.1",
     "netlify": "^12.0.0",
     "netlify-headers-parser": "^6.0.2",
-    "netlify-onegraph-internal": "0.8.5",
+    "netlify-onegraph-internal": "0.8.6",
     "netlify-redirect-parser": "^13.0.5",
     "netlify-redirector": "^0.2.1",
     "node-fetch": "^2.6.0",
