fix(ci): do not build site during prerelease workflow (#4968)

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -18,7 +18,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - name: Install core dependencies
         run: npm ci --no-audit
-      - name: Install site
+      - name: Install site dependencies
         run: npm run site:build:install
       - name: Extract tag and version
         id: extract
