--- a/package.json
+++ b/package.json
@@ -182,15 +182,15 @@
   "repository": "netlify/cli",
   "main": "src/index.cjs",
   "bin": {
-    "ntl": "./bin/run",
-    "netlify": "./bin/run"
+    "ntl": "./bin/run.mjs",
+    "netlify": "./bin/run.mjs"
   },
   "bugs": {
     "url": "https://github.com/netlify/cli/issues"
   },
   "scripts": {
     "prepare": "husky install node_modules/@netlify/eslint-config-node/.husky/",
-    "start": "node ./bin/run",
+    "start": "node ./bin/run.mjs",
     "test": "run-s format test:dev",
     "format": "run-s format:check-fix:*",
     "format:ci": "run-s format:check:*",
@@ -360,7 +360,7 @@
   "ava": {
     "files": [
       "tools/**/*.test.mjs",
-      "tests/**/*.test.js"
+      "tests/**/*.test.cjs"
     ],
     "cache": true,
     "concurrency": 5,
