--- a/package.json
+++ b/package.json
@@ -192,7 +192,8 @@
   "scripts": {
     "prepare": "husky install node_modules/@netlify/eslint-config-node/.husky/",
     "start": "node ./bin/run.mjs",
-    "test": "run-s format test:dev",
+    "build": "tsc",
+    "test": "run-s build format test:dev",
     "format": "run-s format:check-fix:*",
     "format:ci": "run-s format:check:*",
     "format:check-fix:lint": "run-e format:check:lint format:fix:lint",
