feat: initial design experiments with netlify dev

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Netlify Inc.",
   "type": "module",
   "contributors": [
-    "@whitep4nth3r (https://twitter.com/whitep4nth3r)",
+    "@whitep4nth3r (https://whitep4nth3r.com)",
     "Abraham Schilling <AbrahamSchilling@gmail.com> (https://gitlab.com/n4bb12)",
     "Alberto De Agostini (https://twitter.com/albertodeago88)",
     "Alejandro Ñáñez Ortiz <git@alejandro.dev> (https://twitter.com/alejandronanez)",
