chore: introduce vitests for ESM unit tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,9 @@ jobs:
       - name: Run unit tests
         run: npm run test:ci:ava:unit
         if: '${{!steps.release-check.outputs.IS_RELEASE}}'
+      - name: Run vitest unit tests
+        run: npm run test:ci:vitest:unit
+        if: '${{!steps.release-check.outputs.IS_RELEASE}}'
   test:
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
