--- a/package.json
+++ b/package.json
@@ -215,6 +215,7 @@
     "test:ci:ava:unit": "c8 -r json ava --no-worker-threads tests/unit/ tools/",
     "test:ci:ava:integration": "c8 -r json ava --concurrency 1 --no-worker-threads tests/integration/",
     "test:ci:vitest:unit": "vitest run --coverage tests/unit/",
+    "test:ci:vitest:integration": "vitest run --coverage --no-threads tests/integration/",
     "test:affected": "node ./tools/affected-test.mjs",
     "e2e": "node ./tools/e2e/run.mjs",
     "docs": "node ./site/scripts/docs.mjs",
@@ -368,8 +369,7 @@
   "ava": {
     "files": [
       "tools/**/*.test.mjs",
-      "tests/integration/**/*.test.+(c|m)js",
-      "tests/unit/**/*.test.cjs"
+      "tests/**/*.test.cjs"
     ],
     "cache": true,
     "concurrency": 5,
